# Tottem

./: .gitignore  README.md  data.db-shm  data.db-wal  import  pyproject.toml  test_yaml.py  verify_hash.py
config/: config.schema.yaml  config.yaml
docs/: design_tokens.md  kiosk_ux.md
migrations/: 001_init.sql  002_add_product_fields.sql  003_product_extras.sql  005_ticket_item_unit.sql  006_shifts_and_ticket_fk.sql  007_ticket_paid_change.sql  008_add_product_icon.sql  008_payment_method.sql  009_add_product_card_color.sql  010_presentations_pricing.sql  010_pricing_rules.sql  add_product_fields.sql  quantity_real.sql  seed_products.sql
scripts/: factory_reset.sh  install_deps.sh  setup_services.sh  teardown_services.sh  uninstall_deps.sh  uninstall_services.sh
src/: __main__.py  cli.py
src/config/: config.yaml
src/core/: db.py  hwid.py  settings.py
src/drivers/: hw_detect.py  printer_escpos.py
src/pos_local.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/services/: auth.py  emailer.py  employees.py  factory_reset.py  i18n.py  osctl.py  presentations.py  pricing.py  products.py  receipts.py  reports.py  sales.py  settings.py  shifts.py  themes.py
src/tottem_pos.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
src/ui/: admin_app.py  icon_helper.py  kiosk_app.py  mouse_manager.py  responsive.py  theme.qss  theme_light.qss
src/ui/assets/: README.md
src/ui/widgets/: keypad.py  (+4 more)
system/: pos.service  splash.sh
system/sudoers.d/: pos
tests/: test_db.py  test_presentations.py  test_pricing.py  test_receipts.py
